--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,6 @@ dotnet_diagnostic.CA1854.severity = none
 
 # CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
 dotnet_diagnostic.CS8618.severity = none
+
+# IDE0028: Simplify collection initialization
+dotnet_diagnostic.IDE0028.severity = none
