--- a/CMFTAspNet/CMFTAspNet.csproj
+++ b/CMFTAspNet/CMFTAspNet.csproj
@@ -10,4 +10,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Connections\" />
+  </ItemGroup>
+
 </Project>
