Add service to get throughput for team from Azure DevOps

--- a/CMFTAspNet/CMFTAspNet.csproj
+++ b/CMFTAspNet/CMFTAspNet.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Connections\" />
+    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="16.205.1" />
   </ItemGroup>
 
 </Project>
