--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,6 +32,8 @@ jobs:
     
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      env:
+        AzureDevOpsCMFTIntegrationTestToken: ${{ secrets.AZUREDEVOPSCMFTINTEGRATIONTESTTOKEN }}
 
     - name: SonarCloud
       uses: highbyte/sonarscan-dotnet@v2.3.1
