Add ADO Test token for Sonar Cloud task

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,3 +47,4 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        AzureDevOpsCMFTIntegrationTestToken: ${{ secrets.AZUREDEVOPSCMFTINTEGRATIONTESTTOKEN }}
