Allow to configure forecasts more detailed
- Allow to include unparented items
- Get feature name and order
- Run forecast according to order

--- a/CMFTAspNet.Tests/CMFTAspNet.Tests.csproj
+++ b/CMFTAspNet.Tests/CMFTAspNet.Tests.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\CMFTAspNet\CMFTAspNet.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Factories\" />
+  </ItemGroup>
+
 </Project>
