--- a/CMFTAspNet/appsettings.json
+++ b/CMFTAspNet/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CMFTAspNetContext": "Data Source=CMFTAspNetContext-32ddca4f-e230-4d60-abf5-efa5bdc8b4b8.db"
+  }
 }
