--- a/CMFTAspNet/appsettings.json
+++ b/CMFTAspNet/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppContext": "Data Source=CMFTAspNetContext-32ddca4f-e230-4d60-abf5-efa5bdc8b4b8.db"
+    "AppContext": "Data Source=CMFTAppContext.db"
   }
 }
