Add service to periodically update throughput for all teams

--- a/CMFTAspNet/appsettings.Development.json
+++ b/CMFTAspNet/appsettings.Development.json
@@ -5,5 +5,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PeriodicRefresh": {
+    "Throughput": {
+      "Interval": 1,
+      "RefreshAfter": 3
+    },
+    "Forecasts": {
+      "Interval": 2,
+      "RefreshAfter": 5
+    }
   }
 }
