--- a/CMFTAspNet/appsettings.json
+++ b/CMFTAspNet/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppContext": "Data Source=CMFTAppContext.db"
+  },
+  "PeriodicRefresh": {
+    "Throughput": {
+      "Interval": 60,
+      "RefreshAfter": 360
+    },
+    "Forecasts": {
+      "Interval": 20,
+      "RefreshAfter": 120
+    }
   }
 }
