Properly update time of last project update

--- a/CMFTAspNet/appsettings.Development.json
+++ b/CMFTAspNet/appsettings.Development.json
@@ -11,6 +11,10 @@
       "Interval": 1,
       "RefreshAfter": 3
     },
+    "WorkItems": {
+      "Interval": 1,
+      "RefreshAfter": 3
+    },
     "Forecasts": {
       "Interval": 2,
       "RefreshAfter": 5
