--- a/CMFTAspNet/appsettings.json
+++ b/CMFTAspNet/appsettings.json
@@ -14,6 +14,10 @@
       "Interval": 60,
       "RefreshAfter": 360
     },
+    "WorkItems": {
+      "Interval": 60,
+      "RefreshAfter": 360
+    },
     "Forecasts": {
       "Interval": 20,
       "RefreshAfter": 120
