--- a/CMFTAspNet/appsettings.Development.json
+++ b/CMFTAspNet/appsettings.Development.json
@@ -9,15 +9,18 @@
   "PeriodicRefresh": {
     "Throughput": {
       "Interval": 1,
-      "RefreshAfter": 3
+      "RefreshAfter": 3,
+      "StartDelay": 0
     },
     "WorkItems": {
       "Interval": 1,
-      "RefreshAfter": 3
+      "RefreshAfter": 3,
+      "StartDelay": 0
     },
     "Forecasts": {
       "Interval": 2,
-      "RefreshAfter": 5
+      "RefreshAfter": 5,
+      "StartDelay": 0
     }
   }
 }
