Make sure deletion of teams and projects works

--- a/.editorconfig
+++ b/.editorconfig
@@ -43,6 +43,12 @@ dotnet_diagnostic.IDE0090.severity = none
 # IDE0063: Use simple 'using' statement
 dotnet_diagnostic.IDE0063.severity = none
 
+# CS8602: Dereference of a possibly null reference.
+dotnet_diagnostic.CS8602.severity = none
+
+# CS8601: Possible null reference assignment.
+dotnet_diagnostic.CS8601.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
