--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+name: Build And Deploy Lighthouse
 
-name: .NET
+env:
+  DOTNET_VERSION: '8'                 # set this to the .NET Core version to use
 
 on:
   push:
@@ -15,20 +15,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: '0'
     
-    - name: Setup .NET
+    - name: Set up .NET Core
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: Restore dependencies
-      run: dotnet restore
+    - name: Set up dependency caching for faster builds
+      uses: actions/cache@v3
+      with:
+        path: ~/.nuget/packages
+        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-nuget-
 
-    - name: Build
-      run: dotnet build --no-restore
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
     
     - name: Test
       run: dotnet test --no-build --verbosity normal
@@ -44,6 +46,15 @@ jobs:
         sonarOrganization: letpeoplework
         dotnetTestArguments: --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
         sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
+
+    - name: dotnet publish
+      run: dotnet publish -c Release -f net8.0 -o ${{env.DOTNET_ROOT}}/publish
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v4
+      with:
+        name: Lighthouse
+        path: ${{env.DOTNET_ROOT}}/publish
         
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -54,25 +65,33 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    #if: github.ref == 'refs/heads/main'
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: '0'
+    #if: github.ref == 'refs/heads/main'   
     
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 8.0.x
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    - name: Restore dependencies
-      run: dotnet restore
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
-    - name: Publish Project
-      run: dotnet publish -c Release -f net8.0 --no-restore
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse
 
-    - uses: actions/upload-artifact@v4
-      with:
-        name: Lighthouse
-        path: "**/publish/**"
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.__clientidsecretname__ }}
+          tenant-id: ${{ secrets.__tenantidsecretname__ }}
+          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}  
+  
+      - name: Deploy to Azure Web App  
+        id: deploy-to-webapp  
+        uses: azure/webapps-deploy@v2  
+        with:  
+          app-name: 'LighthouseCloudDemo'  
+          slot-name: 'production'  
+          package: .
+  
