Add job dependency

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -65,8 +65,10 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    #if: github.ref == 'refs/heads/main'   
+    needs: build
     
+    #if: github.ref == 'refs/heads/main'   
+
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
