--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,8 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: '0'
     
-    - name: Set up .NET Core
+    - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
@@ -28,9 +31,12 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
         restore-keys: |
           ${{ runner.os }}-nuget-
+    
+    - name: Restore dependencies
+      run: dotnet restore
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release --no-restore
     
     - name: Test
       run: dotnet test --no-build --verbosity normal
@@ -66,7 +72,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     #if: github.ref == 'refs/heads/main'   
 
     environment:
