--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,7 +36,7 @@ jobs:
       run: dotnet restore
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --no-restore
     
     - name: Test
       run: dotnet test --no-build --verbosity normal
