--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: '0'
 
     - name: SonarCloud
       uses: highbyte/sonarscan-dotnet@v2.3.1
