--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,6 +32,11 @@ jobs:
         dotnetTestArguments: --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
         sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
 
+    # Otherwise there is an issue with access denied
+    - name: Sleep for 3 seconds
+      run: sleep 3s
+      shell: bash
+
     - name: dotnet publish
       run: dotnet publish -c Release -f net8.0 -o ${{env.DOTNET_ROOT}}/publish
 
