--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,14 @@ jobs:
         dotnet-version: ${{env.DOTNET_ROOT}}
 
     - name: dotnet publish
-      run: dotnet publish -c Release -f net8.0 -o ${{env.DOTNET_ROOT}}/publishFolder/Lighthouse
+      run: dotnet publish -c Release -f net8.0 -o ./publish
+      working-directory: ./Lighthouse
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v4
+      with:
+        name: Lighthouse
+        path: ./Lighthouse/publish
 
     - name: SonarCloud
       uses: highbyte/sonarscan-dotnet@v2.3.1
@@ -39,12 +46,6 @@ jobs:
         sonarOrganization: letpeoplework
         dotnetTestArguments: --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
         sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v4
-      with:
-        name: Lighthouse
-        path: ${{env.DOTNET_ROOT}}/publishFolder/Lighthouse
 
 
   deploy:
