--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,11 +22,6 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
-        
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{env.DOTNET_ROOT}}
 
     - name: SonarCloud
       uses: highbyte/sonarscan-dotnet@v2.3.1
@@ -37,20 +32,9 @@ jobs:
         dotnetTestArguments: --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
         sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
 
-    - name: dotnet publish
-      run: dotnet publish -c Release --no-build -o ./publish
-      working-directory: ./Lighthouse
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v4
-      with:
-        name: Lighthouse
-        path: ./Lighthouse/publish
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-
+    #needs: build
     #if: github.ref == 'refs/heads/main'   
 
     environment:
@@ -61,10 +45,25 @@ jobs:
       id-token: write #This is required for requesting the JWT
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+        
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{env.DOTNET_ROOT}}
+
+      - name: dotnet publish
+        run: dotnet publish -c Release -o ./publish
+        working-directory: ./Lighthouse
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
         with:
           name: Lighthouse
+          path: ./Lighthouse/publish
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp  
@@ -72,6 +71,6 @@ jobs:
         with:  
           app-name: 'LighthouseCloudDemo'  
           slot-name: 'production'  
-          package: .  
+          package: ./Lighthouse/publish  
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_b2451da2f37a4b24932049f5b05e6a46 }}
   
