--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,8 +34,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    #needs: build
-    #if: github.ref == 'refs/heads/main'   
+    needs: build
+    if: github.ref == 'refs/heads/main'   
 
     environment:
       name: 'Production'
