--- a/Lighthouse/appsettings.json
+++ b/Lighthouse/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "LighthouseAppContext": "Data Source=LighthouseAppContext.db"
   },
+  "LighthouseVersion":  "DEV",
   "PeriodicRefresh": {
     "Throughput": {
       "Interval": 60,
