--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,8 +59,8 @@ jobs:
         id: buildnumber
         run: echo "BUILD_NUMBER=$(date +'%Y.%m.%d').${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
 
-      - name: Write build number to file
-        run: echo "LighthouseVersion=${BUILD_NUMBER}" > appsettings.json
+      - name: Update appsettings.json
+        run: jq '.LighthouseVersion = env.BUILD_NUMBER' appsettings.json > temp.json && mv temp.json appsettings.json
         working-directory: ./Lighthouse
 
       - name: dotnet publish
@@ -70,7 +70,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: Lighthouse_v${BUILD_NUMBER}
+          name: Lighthouse_v${{ env.BUILD_NUMBER }}
           path: ./Lighthouse/publish
 
       #- name: Login to Azure
