Add job to automatically release via action

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -56,9 +56,13 @@ jobs:
         with:
           dotnet-version: ${{env.DOTNET_ROOT}}
 
+      - name: Create tag if necessary
+        id: version
+        uses: fregante/daily-version-action@v2
+
       - name: Generate build number
         id: buildnumber
-        run: echo "BUILD_NUMBER=$(date +'%Y.%m.%d').${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
+        run: echo "BUILD_NUMBER=${{ steps.version.outputs.version }} >> $GITHUB_ENV
 
       - name: Update appsettings.json
         run: jq '.LighthouseVersion = env.BUILD_NUMBER' appsettings.json > temp.json && mv temp.json appsettings.json
@@ -89,3 +93,22 @@ jobs:
           slot-name: 'production'  
           package: ./Lighthouse/publish
   
+  release:
+    runs-on: ubuntu-latest
+    needs: deploy
+    if: github.ref == 'refs/heads/main'   
+
+    environment:
+      name: Release
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse_v${{ needs.Tag.outputs.version }}
+
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: "Lighthouse_v${{ needs.Tag.outputs.version }}"
+          tag: ${{ needs.Tag.outputs.version }}
+          prerelease: true
+          name: "Lighthouse ${{ needs.Tag.outputs.version }}"
