--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,8 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     permissions:
-      id-token: write #This is required for requesting the JWT
+      contents: write
+      id-token: write
 
     steps:
 
@@ -101,6 +102,9 @@ jobs:
     environment:
       name: Release
 
+    permissions:
+      contents: write
+      
     steps:
       - uses: actions/download-artifact@v4
         with:
