--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,8 +35,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'   
+    #needs: build
+    #if: github.ref == 'refs/heads/main'   
 
     environment:
       name: 'Production'
@@ -61,12 +61,8 @@ jobs:
         id: version
         uses: fregante/daily-version-action@v2
 
-      - name: Generate build number
-        id: buildnumber
-        run: echo "BUILD_NUMBER=${{ steps.version.outputs.version }} >> $GITHUB_ENV
-
       - name: Update appsettings.json
-        run: jq '.LighthouseVersion = env.BUILD_NUMBER' appsettings.json > temp.json && mv temp.json appsettings.json
+        run: jq '.LighthouseVersion = env.DAILY_VERSION' appsettings.json > temp.json && mv temp.json appsettings.json
         working-directory: ./Lighthouse
 
       - name: dotnet publish
@@ -76,7 +72,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: Lighthouse_v${{ env.BUILD_NUMBER }}
+          name: Lighthouse_v${{ env.DAILY_VERSION }}
           path: ./Lighthouse/publish
 
       - name: Login to Azure
@@ -97,22 +93,22 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: deploy
-    if: github.ref == 'refs/heads/main'   
+    #if: github.ref == 'refs/heads/main'   
 
     environment:
       name: Release
 
     permissions:
       contents: write
-      
+
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: Lighthouse_v${{ needs.Tag.outputs.version }}
+          name: Lighthouse_v${{ needs.Release.outputs.version }}
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse_v${{ needs.Tag.outputs.version }}"
-          tag: ${{ needs.Tag.outputs.version }}
+          artifacts: "Lighthouse_v${{ needs.Release.outputs.version }}"
+          tag: ${{ needs.Release.outputs.version }}
           prerelease: true
-          name: "Lighthouse ${{ needs.Tag.outputs.version }}"
+          name: "Lighthouse ${{ needs.Release.outputs.version }}"
