--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -114,7 +114,7 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse ${{ needs.deploy.outputs.version }}/**"
+          artifacts: "Lighthouse"
           tag: ${{ needs.deploy.outputs.version }}
           prerelease: true
           name: "Lighthouse ${{ needs.deploy.outputs.version }}"
