--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,8 +35,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    #needs: build
-    #if: github.ref == 'refs/heads/main'   
+    needs: build
+    if: github.ref == 'refs/heads/main'   
 
     environment:
       name: 'Production'
@@ -99,7 +99,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: deploy
-    #if: github.ref == 'refs/heads/main'   
+    if: github.ref == 'refs/heads/main'   
 
     environment:
       name: Release
