Create release workflow (#5)
Add workflow stage to create release on demand

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,13 +60,11 @@ jobs:
       - name: Create tag if necessary
         id: version
         uses: fregante/daily-version-action@v2
-
-      - name: Generate build number
-        id: buildnumber
-        run: echo "BUILD_NUMBER=${{ steps.version.outputs.version }} >> $GITHUB_ENV
+        with:
+          prefix: v
 
       - name: Update appsettings.json
-        run: jq '.LighthouseVersion = env.BUILD_NUMBER' appsettings.json > temp.json && mv temp.json appsettings.json
+        run: jq '.LighthouseVersion = env.DAILY_VERSION' appsettings.json > temp.json && mv temp.json appsettings.json
         working-directory: ./Lighthouse
 
       - name: dotnet publish
@@ -76,7 +74,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: Lighthouse_v${{ env.BUILD_NUMBER }}
+          name: Lighthouse ${{ env.DAILY_VERSION }}
           path: ./Lighthouse/publish
 
       - name: Login to Azure
@@ -93,6 +91,10 @@ jobs:
           app-name: 'LighthouseCloudDemo'  
           slot-name: 'production'  
           package: ./Lighthouse/publish
+      
+    outputs:
+      created: ${{ steps.version.outputs.created }}
+      version: ${{ steps.version.outputs.version }}
   
   release:
     runs-on: ubuntu-latest
@@ -104,15 +106,21 @@ jobs:
 
     permissions:
       contents: write
-      
+
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: Lighthouse_v${{ needs.Tag.outputs.version }}
+          name: Lighthouse ${{ needs.deploy.outputs.version }}
+          path: Lighthouse
+
+      - uses: vimtor/action-zip@v1.2
+        with:
+          files: Lighthouse
+          dest: Lighthouse ${{ needs.deploy.outputs.version }}.zip
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse_v${{ needs.Tag.outputs.version }}"
-          tag: ${{ needs.Tag.outputs.version }}
+          artifacts: "Lighthouse ${{ needs.deploy.outputs.version }}.zip"
+          tag: ${{ needs.deploy.outputs.version }}
           prerelease: true
-          name: "Lighthouse ${{ needs.Tag.outputs.version }}"
+          name: "Lighthouse ${{ needs.deploy.outputs.version }}"
