--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           image_name: letpeoplework.${{ github.repository }} 
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Lighthouse/Dockerfile
+          dockerfile: ./Lighthouse/Dockerfile
       
