--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           image_name: letpeoplework.${{ github.repository }} 
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Lighthouse/Dockerfile
+          dockerfile: ./Lighthouse/Dockerfile
         
 
   deploy:
