Adjust image name

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@master        
         with:
-          image_name: letpeoplework.${{ github.repository }} 
+          image_name: ${{ github.repository }} 
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dockerfile: Lighthouse/Dockerfile
         
