--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,11 +16,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
-          
+
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@master        
         with:
-          image_name: letpeoplework.${{ github.repository }} 
+          image_name: ${{ github.repository }} 
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dockerfile: Lighthouse/Dockerfile
       
