--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,6 +38,8 @@ jobs:
     #needs: build
     #if: github.ref == 'refs/heads/main'
 
+    permissions: write-all
+
     steps:
       - uses: actions/checkout@v4
         with:
