--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,8 +35,8 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    #needs: build
-    #if: github.ref == 'refs/heads/main'
+    needs: build
+    if: github.ref == 'refs/heads/main'
 
     permissions: write-all
 
