Add Serilog file logging

--- a/Lighthouse.Tests/Lighthouse.Tests.csproj
+++ b/Lighthouse.Tests/Lighthouse.Tests.csproj
@@ -24,4 +24,11 @@
 	  <ProjectReference Include="..\Lighthouse\Lighthouse.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
+
 </Project>
