Add logging statements

--- a/Lighthouse/appsettings.Development.json
+++ b/Lighthouse/appsettings.Development.json
@@ -2,7 +2,7 @@
   "DetailedErrors": true,
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
         "Microsoft.AspNetCore": "Warning",
         "Microsoft.EntityFrameworkCore": "Warning",
