--- a/Lighthouse/appsettings.Development.json
+++ b/Lighthouse/appsettings.Development.json
@@ -20,6 +20,9 @@
       }
     ]
   },
+  "FeatureFlags": {
+    "UseNewFrontend": true
+  },
   "PeriodicRefresh": {
     "Throughput": {
       "Interval": 1,
