--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,21 @@ jobs:
       with:
         fetch-depth: '0'
 
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+
+    - name: Install npm dependencies
+      run: npm install
+      working-directory: ./Lighthouse.Frontend
+
+    - name: Lint Frontend
+      run: npm run lint
+      working-directory: ./Lighthouse.Frontend
+
+    - name: Build Frontend
+      run: npm run build
+      working-directory: ./Lighthouse.Frontend
+
     - name: SonarCloud
       uses: highbyte/sonarscan-dotnet@v2.3.1
       with:
@@ -36,7 +51,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
 
     permissions: write-all
 
@@ -76,6 +91,14 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{env.DOTNET_ROOT}}
+
+      - name: Install npm dependencies
+        run: npm install
+        working-directory: ./Lighthouse.Frontend
+
+      - name: Build Frontend
+        run: npm run build
+        working-directory: ./Lighthouse.Frontend
 
       - name: Create tag if necessary
         id: version
