--- a/Lighthouse/appsettings.json
+++ b/Lighthouse/appsettings.json
@@ -30,6 +30,9 @@
   "ConnectionStrings": {
     "LighthouseAppContext": "Data Source=LighthouseAppContext.db"
   },
+  "FeatureFlags": {
+    "UseNewFrontend": false
+  },
   "LighthouseVersion": "DEV",
   "PeriodicRefresh": {
     "Throughput": {
